<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/msn"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/usuarioField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:ems="10" 
        android:inputType="text">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/contrasenaField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usuarioField"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/usuarioField"
        android:layout_marginTop="24dp"
        android:text="@string/contrasena_txt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/ingresarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contrasenaField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/ingresar_btn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ingresarBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/mensajeReg_txt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="34dp"
        android:text="@string/usuario_txt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>